@startuml

' ========= V2 =========

' ===== TPG DOMAIN =====
class TPG {
    + name : String
    + dtype : String
    + GP instruction set : List<String>
}
class Team { 
    + id : Integer 
}

class TeamCompiled { 
    + code : String
}

class Instruction {
    + mnemonic : String
    + operands : List<String>
}

TPG "1" *-- "1..*" Team : contains
Team "1" *-- "1..*" TeamCompiled : compiled as
TeamCompiled "1" *-- "1..*" Instruction

' ===== COMPILATION TARGET (assembly level) =====
class ISA {
    + name : String n
}
TeamCompiled "1..*" --> "1" ISA : compiled for

' ===== STATIC FEATURES (per compiled binary, ISA-determined) =====
class FeatureVector {
    + values : Map<String, Float>
}
TeamCompiled "1" *-- "1" FeatureVector

' ===== MICROARCHITECTURE =====
class Uarch {
    + name : String
    + abi : String
}
Uarch "1..*" --> "1" ISA : implements

' ===== THE HUB: one measurement = one (TeamCompiled, Uarch) point =====
class TeamMeasurement {
    + latencyAvg : Float
    + latencyStdDev : Float
    + nbMeasurements : Integer
}
TeamCompiled "1" *-- "1..*" TeamMeasurement : measured as
TeamMeasurement "0..*" --> "1" Uarch : on

' ===== TOOLING =====
class Disassembler {
    + parseAssembly(code: String) : List<Instruction>
    + parseLatencyJson(path : String) : TPGLatencyData
}
class FeaturesAnalyzer {
    + analyzeInstructions(instructions : List<Instruction>) : FeatureVector
}
Disassembler   ..> TeamCompiled : parses
Disassembler   ..> Instruction  : produces
FeaturesAnalyzer ..> Instruction  : analyzes
FeaturesAnalyzer ..> FeatureVector : produces

' ===== LATENCY MODEL =====
class RegressionModel {
    + weights : Map<String, Float>
    + bias : Float
}
class Regressor {
    + train(features : List<FeatureVector>, measurements : List<TeamMeasurement>) : RegressionModel
    + predict(features : FeatureVector) : Float
}
Regressor ..> RegressionModel : produces
Regressor ..> FeatureVector : takes training data
Regressor ..> TeamMeasurement : takes latency labels

@enduml